0.50 2021-07-??
-change: correct uri_split and uri to treat leading double-slash in input
 string as the beginning of the authority section, as URI and URI::Split do,
 instead of as the beginning of the path with ad leading empty segment

0.49 2019-08-02
-make 0.48_01 official

0.48_01 2019-07-31
-bugfix: calling query_keyset with a zero-length key could result in a
 malformed query string
-bugfix: calling set_param with an array containing a zero-length string could
 result in a malformed query string

0.48 2019-07-09
-make 0.47_01 official

0.47_01 2019-07-06
-bugfix: fix dynamically set $VERSION in URI::Fast::IRI

0.47 2019-07-05
-bugfix: escape_tree and unescape_tree die when called with non-reference
 argument
-workaround: an older release had a versioned URI::Fast::IRI, requiring that it
 remains versioned to keep the cpan indexer happy; this change works around
 that by linking it to $URI::Fast::VERSION.
-bugfix: path([]) caused infinite loop, because why would av_top_index return 0
 for an empty array anyway?

0.46 2019-01-03
-feature: new routines escape_tree() and unescape_tree() added

0.45 2018-12-10
-feature: documented and exposed lower level method split_path, added
 split_path_compat which replicates the behavior of URI->path_segments as a
 getter

0.44 2018-12-05
-bugfix: removed hard-coded references to class name which were preventing expected
 behavior when subclassing URI::Fast

0.43 2018-11-27
-new feature: append() method serially constructs a URI from fragments of path,
 query, and fragment (credit: merlyn)

0.42 2018-11-21
-bugfix: uri_split() forces stringification of input
-behavior: URI::Fast::Test routines now automatically stringify and parse their parameters

0.41 2018-08-15
-bugfix: small memory leak in to_string when there is no authority section present
-bugfix: to_string did not properly encode authority section in some cases
-new method: absolute($base)
-new method: normalize (like URI->canonical)
-new method: relative($base)