@@ -10,13 +10,8 @@ use Encode qw(encode);
 
 sub uri {
   my ($uri_string, %param) = @_;
-  my $encoding = $param{encoding} || 'UTF-8';
 
-  # First, interpret the URI string as the encoding from the document from
-  # which it presuambly came.
-  $uri_string = encode $encoding, $uri_string, Encode::FB_CROAK;
-
-  # Next, remove characters specified by the URL standard
+  # Remove characters specified by the URL standard
   $uri_string =~ s|[\t\r\n]||g; # strip tabs, line feeds, and carriage returns
   $uri_string =~ tr|\\|/|;      # convert backslashes to forward slashes
 
