@@ -2,6 +2,9 @@
 -change: correct uri_split and uri to treat leading double-slash in input
  string as the beginning of the authority section, as URI and URI::Split do,
  instead of as the beginning of the path with ad leading empty segment
+-change: URI input strings are now scrubbed of whitespace permitted by URLs
+ read from HTML documents (tab, newline, carriage return) and backslashes
+ are replaced with forward slashes (also allowed in HTML, I'm afraid)
 
 0.49 2019-08-02
 -make 0.48_01 official
